--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | ChoreMaster AI</title>
+<!-- EmailJS SDK -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+</head>
+<body>
+    <div id="app">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -311,8 +319,32 @@
         const icons = { grocery: 'shopping-bag', ride: 'truck', reminder: 'bell' };
         return icons[type] || 'activity';
     }
+        <div class="task-form">
+            <h2>Create New Task</h2>
+            <input type="text" id="taskName" placeholder="Task name">
+            <textarea id="taskDescription" placeholder="Description"></textarea>
+            <input type="text" id="assignedTo" placeholder="Assign to">
+            <input type="date" id="dueDate">
+            <select id="priority">
+                <option value="Low">Low</option>
+                <option value="Normal">Normal</option>
+                <option value="High">High</option>
+            </select>
+            <label>
+                <input type="checkbox" id="sendEmail" checked>
+                Send email notification
+            </label>
+            <button onclick="createTask()">Create Task</button>
+        </div>
+    </div>
+
+    <!-- Scripts -->
+    <script src="js/email-config.js"></script>
+    <script src="js/email-service.js"></script>
+    <script src="js/app.js"></script>
 </script>
 </html>
+
 
 
 
