--- a/index.html
+++ b/index.html
@@ -208,15 +208,15 @@
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 24px; margin-bottom: 32px;">
             <div class="card stat-card">
                 <h3 style="font-size: 18px; font-weight: 600; color: #6b7280; margin-bottom: 8px;">Monthly Savings</h3>
-                <p style="font-size: 32px; font-weight: 700; color: #7c3aed;">$125.50</p>
+                <p style="font-size: 32px; font-weight: 700; color: #7c3aed;">Rs 1000.00</p>
             </div>
             <div class="card stat-card">
                 <h3 style="font-size: 18px; font-weight: 600; color: #6b7280; margin-bottom: 8px;">Tasks Completed</h3>
-                <p style="font-size: 32px; font-weight: 700; color: #2563eb;">42</p>
+                <p style="font-size: 32px; font-weight: 700; color: #2563eb;">00</p>
             </div>
             <div class="card stat-card">
                 <h3 style="font-size: 18px; font-weight: 600; color: #6b7280; margin-bottom: 8px;">Upcoming Tasks</h3>
-                <p style="font-size: 32px; font-weight: 700; color: #059669;">5</p>
+                <p style="font-size: 32px; font-weight: 700; color: #059669;">00</p>
             </div>
         </div>
 
@@ -344,6 +344,7 @@
     <script src="js/app.js"></script>
 </script>
 </html>
+
 
 
 
